# penny-pincher-pro

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  conftest.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1234f049eb54_add_ticker_source_to_tickers.py  516eb43cb94b_initial_schema.py  73dbb00734c5_telegram_inbound_bot_state.py  f4d8c2a93b71_add_portfolios.py  (+6 more)
backend/alerts/: __init__.py  dispatcher.py
backend/api/: alerts.py  backtest.py  earnings.py  macro.py  main.py  portfolios.py  positions.py  preferences.py  screener.py  system.py  tickers.py
backend/backtest/: __init__.py  __main__.py  cli.py  coverage.py  filter_backtest.py  forward_returns.py  metrics.py  portfolio.py  pricing.py  simulator.py  stats.py
backend/core/: __init__.py  config.py  healthchecks.py  logging.py  time.py
backend/db/: __init__.py  session.py
backend/ingestion/: __init__.py  alpaca_client.py  bars.py  earnings.py  finnhub_client.py  indicators.py  iv.py  iv_backfill.py  macro.py  options.py  options_client.py  options_history.py  persistence.py  pipeline.py  polygon_client.py  polygon_flatfiles.py  ticker_backfill.py  ticker_metadata.py  universe.py  universe_list.json  universe_sp400.json  universe_sp600.json  yahoo_client.py
backend/positions/: __init__.py  attribution.py  management.py  snapshot.py  state_machine.py
backend/scheduler/: __init__.py  app.py  context.py
backend/screener/: __init__.py  context.py  loader.py  pipeline.py  registry.py
backend/scripts/: seed_dev.py  seed_filter_configs.py
backend/tests/: conftest.py  test_alerts_api.py  test_alerts_digest.py  test_alerts_digest_job.py  test_alerts_dispatcher.py  test_alerts_intraday_dedup.py  test_alerts_intraday_triggers.py  test_alpaca_client.py  test_api_alerts_history.py  test_api_backtest.py  test_api_health.py  test_api_preferences.py  test_backtest_filter.py  test_backtest_metrics.py  test_backtest_portfolio.py  test_backtest_pricing.py  test_backtest_strategy.py  test_backtest_strategy_real_chain.py  test_backup_job.py  test_bars_fetcher.py  test_data_freshness.py  test_earnings_api.py  test_earnings_fetcher.py  test_email_channel.py  test_email_render.py  test_filter_base.py  test_filter_registry.py  test_filters_base.py  test_filters_event.py  test_filters_liquidity.py  test_filters_technical.py  test_filters_volatility.py  test_finnhub_client.py  test_forward_returns.py  test_indicators.py  test_intraday_job.py  test_iv.py  test_iv_backfill.py  test_job_run.py  test_job_run_reliability.py  (+38 more)
(+147 files in other folders)
