[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wheel-screener-backend"
version = "0.1.0"
description = "Backend for the Penny Pincher Pro wheel screener"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13",
    "alpaca-py>=0.30",
    "ta>=0.11",
    "py_vollib>=1.0.1",
    "scipy>=1.11",
    "pandas>=2.2",
    "numpy>=1.26",
    "structlog>=24.1",
    "tenacity>=8.3",
    "python-dotenv>=1.0",
    "click>=8.1",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "pandas-market-calendars>=4.4",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "syrupy>=4.6",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-python-dateutil",
    "pandas-stubs",
    "respx>=0.22",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "api*",
    "core*",
    "db*",
    "ingestion*",
    "screener*",
    "scheduler*",
    "alerts*",
    "positions*",
    "backtest*",
]
exclude = ["tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # bugbear
    "SIM",           # simplify
    "C4",            # comprehensions
    "PL",            # pylint subset
    "RUF",
]
ignore = [
    "PLR0913",  # too many arguments — fine for fetchers
    "PLR2004",  # magic values — fine in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101", "PLC0415"]
"alembic/env.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions/", "build/", "dist/"]

[[tool.mypy.overrides]]
module = ["ta.*", "alpaca.*", "py_vollib.*", "py_lets_be_rational.*", "apscheduler.*", "pandas_market_calendars.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources.*",
]

[tool.coverage.run]
source = ["api", "core", "db", "ingestion", "screener", "scheduler", "alerts", "positions", "backtest"]
omit = ["*/tests/*", "alembic/*"]
